Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74195

'mapviewer' on android-armv7 not showing map

    XMLWordPrintable

Details

    • Android, Linux/X11, macOS, Windows
    • 5c3e3464c2ccf960ef3aaee4286f3d5b4cde12ac (qt/qtlocation/5.12)

    Description

      Running the 'mapviewer' example, only the Qt "widgets" are shown, but not the map. In Qt Creator's Application Output there is:

       W System.err: java.lang.SecurityException: "gps" location provider requires ACCESS_FINE_LOCATION permission.W System.err: java.lang.SecurityException: "gps" location provider requires ACCESS_FINE_LOCATION permission.W System.err:  at android.os.Parcel.readException(Parcel.java:1942)W System.err:  at android.os.Parcel.readException(Parcel.java:1888)W System.err:  at android.location.ILocationManager$Stub$Proxy.getLastLocation(ILocationManager.java:802)W System.err:  at android.location.LocationManager.getLastKnownLocation(LocationManager.java:1205)W System.err:  at org.qtproject.qt5.android.positioning.QtPositioning.lastKnownPosition(QtPositioning.java:141)W System.err:  at org.qtproject.qt5.android.QtNative.startQtApplication(Native Method)W System.err:  at org.qtproject.qt5.android.QtNative$7.run(QtNative.java:374)W System.err:  at org.qtproject.qt5.android.QtThread$1.run(QtThread.java:61)W System.err:  at java.lang.Thread.run(Thread.java:764)W linker  : "/data/data/org.qtproject.example.qml_location_mapviewer/qt-reserved-files/plugins/geoservices/libqtgeoservices_osm.so" has unsupported flags DT_FLAGS_1=0x80W libqml_location_mapviewer.so: QGeoTileProviderOsm: Tileserver disabled at  QUrl("http://maps-redirect.qt.io/osm/5.8/satellite")W libqml_location_mapviewer.so: QGeoTileFetcherOsm: all providers resolvedE linker  : library "/system/lib/libcrypto.so" ("/system/lib/libcrypto.so") needed or dlopened by "/data/app/org.qtproject.example.qml_location_mapviewer-n1FrjmsvNoPmcpHFJjRueg==/lib/arm/libQt5Core.so" is not accessible for the namespace: [name="classloader-namespace", ld_library_paths="", default_library_paths="/data/app/org.qtproject.example.qml_location_mapviewer-n1FrjmsvNoPmcpHFJjRueg==/lib/arm:/data/app/org.qtproject.example.qml_location_mapviewer-n1FrjmsvNoPmcpHFJjRueg==/base.apk!/lib/armeabi-v7a", permitted_paths="/data:/mnt/expand:/data/data/org.qtproject.example.qml_location_mapviewer"]W libqml_location_mapviewer.so: qt.network.ssl: QSslSocket::connectToHostEncrypted: TLS initialization failedI chatty  : uid=10434(u0_a434) QNetworkAccessM identical 29 linesW libqml_location_mapviewer.so: qt.network.ssl: QSslSocket::connectToHostEncrypted: TLS initialization failedW libEGL  : EGLNativeWindowType 0xd4e7c808 disconnect failed

      Find the whole Application Output attached.

      Attachments

        1. mapviewer.txt
          19 kB
          Milla Pohjanheimo

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              paangele Paolo Angelelli
              mipohjan Milla Pohjanheimo
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes