Display a notice when requesting a SSL map type without SSL support

Some plugins request map data for some map types over HTTPS.
Without SSL support (Qt built without SSL support, or missing OpenSSL
libraries) this typically translates into blank maps.

This is very evident on the MapViewer example.
This patch makes sure that the example displays a notice when this
situation happens.

[ChangeLog] Added a notice to the
MapViewer example to inform when a HTTPS-based map is selected without
SSL support.

Change-Id: I85428bb0536f33089a0e6045301c089fafe69d74
Fixes: QTBUG-74195
Fixes: QTBUG-74294
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>